Remove gitignore extension Fixes #3

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,7 @@
     "vscode": {
       "extensions": [
         // General
-        "codezombiech.gitignore",
+        // ISSUE: #3 Remove gitignore extension
         "eamodio.gitlens",
         "EditorConfig.EditorConfig",
         "esbenp.prettier-vscode",
